--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <link rel="stylesheet" href="/styles/normalize.css" />
-    <link rel="stylesheet" href="/styles/styles.css" />
+    <link rel="stylesheet" href="./styles/normalize.css" />
+    <link rel="stylesheet" href="./styles/styles.css" />
   </head>
   <body>
     <img src="./images/bg-pattern-top.svg" alt="" class="circle circle--top" />
@@ -19,7 +19,7 @@
 
     <div class="container">
       <div class="header">
-        <img src="/images/image-victor.jpg" alt="" />
+        <img src="./images/image-victor.jpg" alt="" />
       </div>
 
       <div class="id">
